// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextArea displays label and text-area-input 1`] = `
<div
  className="form-control"
>
  <label
    className="label"
  >
    <span
      className="label-text"
    >
      Message
    </span>
  </label>
  <textarea
    className="h-24 textarea textarea-bordered textarea-primary"
    placeholder="Enter your message here"
  />
</div>
`;

exports[`TextArea displays text-area-input without label 1`] = `
<div
  className="form-control"
>
  <textarea
    className="h-24 textarea textarea-bordered textarea-primary"
    placeholder="Enter your message here"
  />
</div>
`;
